fix readme style, ajax-success json 404

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ $(function(){
 
   function contentTpl4() {
   /*!
-  <form action="/data/ajax_success.json" method="get">
+  <form action="/boostrap-modal/data/ajax_success.json" method="get">
     <div class="alert alert-danger" role="alert" style="display:none;"></div>
     <label>备注</label>
     <textarea class="form-control" name="note" rows="5"></textarea>
